--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,7 +2,7 @@ services:
   #
   # Instagram Tag Media Parser
   #
-  instagram_parser.by_tag_name:
+  instagram_parser:
     class: Mineur\InstagramParser\Instagram
     factory: ['Mineur\InstagramParser\Instagram', createTagParser]
     arguments:
